--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 .nav1{
     display: flex;
     justify-content: space-between;
@@ -17,6 +20,9 @@
     border: none;
     cursor: pointer;
 }
+.btn1:hover{
+    background-color: rgb(155, 211, 192);
+}
 .banner{
     background-image: url('/assets/Hero-bg.png');
     text-align: center;
@@ -35,4 +41,7 @@
     width: 244px;
     border-radius: 10px;
     cursor: pointer;
+}
+.btn2:hover{
+    background-color: brown;
 }
