--- a/styles/sec4.css
+++ b/styles/sec4.css
@@ -1,7 +1,7 @@
 .sec4 {
     text-align: center;
     width: 1140px;
-    background-image: url('/assets/handshake.jpg');
+    background-image: url('./assets/handshake.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
