--- a/styles/nav.css
+++ b/styles/nav.css
@@ -68,12 +68,9 @@
         background-image: none;
         width: 100%;
         padding: 0px;
+        text-align: left;
     }
     .banner h2,p{
         padding: 0;
     }
-    .btn2{
-        margin-left: 10px;
-    }
-   
 }
