--- a/styles/sec1.css
+++ b/styles/sec1.css
@@ -25,3 +25,19 @@
     background-color: bisque;
     cursor: pointer;
 }
+@media screen and (max-width : 576px) { 
+    .sec1{
+        padding: 0;
+        width: 100%;
+        height: 100%;
+    }
+    .sec1 .part1{
+        padding: 0px;
+        margin: 0;
+    }
+    .sec1 .part2{
+        margin: 0;
+        flex-direction: column;
+
+    }
+}
