--- a/styles/sec2.css
+++ b/styles/sec2.css
@@ -11,3 +11,28 @@
     margin: 32px;
     padding: 32px;
 }
+@media screen and (max-width : 576px ){
+    .sec2,.sec2-1,.sec2-2{
+        margin:0;
+        width: 100%;
+
+        padding: 5px;
+    }
+    .sec2-2 {
+
+        margin: 5px auto;
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 16 / 9;
+        display: flex;
+        border: 1px solid black;
+  }
+
+  .sec2 .sec2-2 iframe {
+    margin: 0;
+    padding: 0;
+    top: auto;
+    width: 100%;
+    height: 100%;
+  }
+}
