--- a/styles/footer.css
+++ b/styles/footer.css
@@ -12,3 +12,16 @@ footer .icons{
     gap: 24px;
 }
 
+@media screen and (max-width : 576px) {
+
+    footer{
+        padding-top: 10px;
+        flex-direction: column;
+        width: 100%;
+    }
+    
+    footer .icons{
+        flex-direction: row;
+    }
+    
+}
